@@ -85,4 +85,5 @@ deploy.demos.schema_browser.local.launchfile_win=${basedir}/resources/demos/sche
 deploy.demos.petstore.remote.launchfile_win=${basedir}/resources/demos/petstore_client_remote.bat
 deploy.demos.petstore.local.launchfile_win=${basedir}/resources/demos/petstore_client_local.bat
 
+#wiki.media.project=//hafrun/darri/public_html/jminor_wiki/data/media/project
 wiki.media.project=/net/hafrun/opt/hafrun/home/hafrun/darri/public_html/jminor_wiki/data/media/project
